# LocalRAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: QUICKSTART.md
examples/: README.md  advanced_retrieval.py  basic_rag.py  basic_usage.py  pdf_processing.py  test_imports.py  toxicity_demo.py  translation_demo.py
src/localrag/: __init__.py  cli.py  config.py  document_loader.py  embeddings.py  main.py  pdf_extractor.py  retrieval.py  text_chunker.py  text_processor.py  toxicity_filter.py  translator.py  vector_store.py
src/localrag/ui/: __init__.py  gradio_app.py  streamlit_app.py
tests/: test_basic.py
