[project]
name = "localrag"
version = "0.1.0"
description = "Local RAG (Retrieval-Augmented Generation) system with PDF text extraction"
readme = "README.md"
authors = [
    { name = "Thanh Hoang-Minh", email = "hmthanh@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pypdf2>=3.0.0",
    "pdfplumber>=0.9.0",
]

[project.scripts]
localrag = "localrag:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "reportlab>=4.4.4",
]
