[project]
name = "localrag"
version = "0.1.0"
description = "A local RAG (Retrieval-Augmented Generation) system using FAISS, LangChain, and Hugging Face"
readme = "README.md"
authors = [
    { name = "Thanh Hoang-Minh", email = "hmthanh@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Core RAG dependencies
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    
    # Vector storage
    "faiss-cpu>=1.7.4",
    
    # PDF processing
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    
    # Embeddings and ML
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.20.0",
    "evaluate>=0.4.0",
    
    # Toxicity filtering
    "detoxify>=0.5.0",
    
    # Google services (alternative to langextract)
    "google-cloud-translate>=3.11.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    
    # Optional UI
    "streamlit>=1.28.0",
    "gradio>=3.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
localrag = "localrag.cli:main"
localrag-ingest = "localrag.cli:ingest"
localrag-query = "localrag.cli:query"
localrag-ui = "localrag.cli:launch_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
