[project]
name = "localrag"
version = "0.1.0"
description = "A local RAG (Retrieval-Augmented Generation) system with PDF processing, vector storage, and toxicity filtering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10", 
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=3.17.0",
    "bitsandbytes>=0.41.0",
    "evaluate>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
localrag = "localrag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
